compiler-core/lexing/tests/snapshots/lexer__char.snap
---
source: compiler-core/lexing/tests/lexer.rs
description: "'a'\n\n'\\xFF'\n\n'abc'\n\n'\\''\n\n'\\\\'\n"
expression: snapshot
snapshot_kind: text
---
annotation : ""
 qualifier : ""
      kind : CHAR
      text : "'a'"
  position : Position { line: 1, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : CHAR
      text : "'\\xFF'"
  position : Position { line: 3, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : CHAR
      text : "'abc'"
  position : Position { line: 5, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : CHAR
      text : "'\\''"
  position : Position { line: 7, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : CHAR
      text : "'\\\\'"
  position : Position { line: 9, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : Position { line: 10, column: 1 }
     error : None
