compiler-core/lexing/tests/snapshots/lexer__invalid_token.snap
---
source: compiler-core/lexing/tests/lexer.rs
description: "《\n\n{- Annotation -} 《\n\n{- Annotation -} Prefix.《\n"
expression: snapshot
snapshot_kind: text
---
annotation : ""
 qualifier : ""
      kind : ERROR
      text : "《"
  position : Position { line: 1, column: 1 }
     error : Some("Invalid token")

annotation : "\n\n{- Annotation -} "
 qualifier : ""
      kind : ERROR
      text : "《"
  position : Position { line: 3, column: 18 }
     error : Some("Invalid token")

annotation : "\n\n{- Annotation -} "
 qualifier : "Prefix."
      kind : ERROR
      text : "《"
  position : Position { line: 5, column: 18 }
     error : Some("Invalid token")

annotation : "\n"
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : Position { line: 6, column: 1 }
     error : None
