compiler-core/lexing/tests/snapshots/lexer__number.snap
---
source: compiler-core/lexing/tests/lexer.rs
description: "123.0\n\n00123.0\n\n123e\n\n123E\n\n123e10\n\n123e+10\n\n123e-10\n\n123.0e10\n\n123.0e+10\n\n123.0e-10\n"
expression: snapshot
snapshot_kind: text
---
annotation : ""
 qualifier : ""
      kind : NUMBER
      text : "123.0"
  position : Position { line: 1, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : NUMBER
      text : "00123.0"
  position : Position { line: 3, column: 1 }
     error : Some("Too many leading zeros")

annotation : "\n\n"
 qualifier : ""
      kind : NUMBER
      text : "123e"
  position : Position { line: 5, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : NUMBER
      text : "123E"
  position : Position { line: 7, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : NUMBER
      text : "123e10"
  position : Position { line: 9, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : NUMBER
      text : "123e+10"
  position : Position { line: 11, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : NUMBER
      text : "123e-10"
  position : Position { line: 13, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : NUMBER
      text : "123.0e10"
  position : Position { line: 15, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : NUMBER
      text : "123.0e+10"
  position : Position { line: 17, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : NUMBER
      text : "123.0e-10"
  position : Position { line: 19, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : Position { line: 20, column: 1 }
     error : None
